--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -69,7 +69,6 @@
 
 
 
-
                 <a href="/login"th:action="@{/logout}" method="post">
                     <span class="material-icons-sharp">
                         logout
@@ -83,7 +82,7 @@
         <!-- Main Content -->
         <main>
             <div class="new-users">
-                <h2>Dashboard</h2>
+                <h2>Users</h2>
                 <div class="user-list">
                     <head>
                         <title></title>
