--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="sidebar">
-                <a href="#">
+                <a href="/user/dashboard">
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
@@ -45,12 +45,12 @@
                     <h3>Your Bookings</h3>
                 </a>
 
-                <a href="#">
+                <a href="/user/testresult">
                     <span class="material-icons-sharp">
                         mail_outline
                     </span>
-                    <h3>Tickets</h3>
-                    <span class="message-count">27</span>
+                    <h3>Test Result</h3>
+                    <span class="message-count"></span>
                 </a>
 
 
