--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
     <body class="text-center">
         <div layout:fragment="content">
             <form class="form-signin" th:action="@{/login}" method="post">
-                <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72" />
+                <img class="mb-4" src="/images/logo.png" alt="" width="72" height="72" />
                 <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
                 <div th:if="${param.error}">
                     Invalid email and password.
